--- a/ec2/tasks/create.yml
+++ b/ec2/tasks/create.yml
@@ -3,8 +3,8 @@
   amazon.aws.ec2_spot_instance:
       launch_specification:
         image_id: ami-0900fe555666598a2
-        key_name: tuncay
-        security_group_ids: sg-0c51ed3484432fe7f
+        key_name: tan
+        security_group_ids: sg-0b42d474f3ea15444
         instance_type: t2.micro
         block_device_mappings:
           - device_name: /dev/sdb
